src/objects/HW_CR_Build_Request_Detail__c.object
<CustomObject>
    <description>Related listing item for association of product engineering review records (PE) to factory build requests (FBR).  Specific engineering requirements and component numbers will be contained within each record.</description>
    <fields>
        <fullName>EE_Reference_Designator__c</fullName>
        <description>PCBA reference designator</description>
        <inlineHelpText>PCBA reference designator</inlineHelpText>
        <label>EE Ref-Des</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FBR_Product_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Planner must reselect the product name for the proper related list filter.  Product selection must match the product name listed within the FBR planning object.</description>
        <inlineHelpText>Planner must reselect the product name for the proper related list filter.  Product selection must match the product name listed within the FBR planning object.</inlineHelpText>
        <label>FBR Product Name</label>
        <referenceTo>Device__c</referenceTo>
        <relationshipLabel>Build Request Details</relationshipLabel>
        <relationshipName>Build_Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HW_CR_PE_Record__c</fullName>
        <description>Direct link to the engineering review record associated to the pilot build being created and scheduled.  Field will link FBR record to PE record.</description>
        <inlineHelpText>Direct link to the engineering review record associated to the pilot build being created and scheduled.  Field will link FBR record to PE record.</inlineHelpText>
        <label>HW CR PE Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Top_Eng_Review_Status__c</field>
                <operation>equals</operation>
                <value>&quot;Review Complete&quot;</value>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Test_Required__c</field>
                <operation>equals</operation>
                <value>&quot;Yes&quot;</value>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Product_Family__c</field>
                <operation>equals</operation>
                <valueField>$Source.Product_Family__c</valueField>
            </filterItems>
            <filterItems>
                <field>HW_Product_Engineer_Review__c.Top_Eng_Approval_Status__c</field>
                <operation>equals</operation>
                <value>&quot;In Process&quot;</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>HW_Product_Engineer_Review__c</referenceTo>
        <relationshipLabel>Build Request Details</relationshipLabel>
        <relationshipName>Build_Request_Details</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ME_Reference_Assembly__c</fullName>
        <description>Top purchased assembly level of internal factory or EMS.  Enter &apos;01&apos;, &apos;SNN&apos;, &apos;SHN&apos;, etc.</description>
        <inlineHelpText>Top purchased assembly level of internal factory or EMS.  Enter &apos;01&apos;, &apos;SNN&apos;, &apos;SHN&apos;, etc.</inlineHelpText>
        <label>ME Ref Assembly</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PE_Record__c</fullName>
        <formula>IF(HW_CR_PE_Record__c   &lt;&gt; null,  HW_CR_PE_Record__r.Id, null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PE Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Description__c</fullName>
        <description>Part description as listed within MotoPDM or Oracle</description>
        <inlineHelpText>Part description as listed within MotoPDM or Oracle</inlineHelpText>
        <label>Part Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <description>Part number associated to change request.</description>
        <inlineHelpText>If electrical part ensure to enter reference designator, if mechanical part ensure to reference the top MMI kit purchased for use within manufacturing.</inlineHelpText>
        <label>Part Number</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Part_Type__c</fullName>
        <description>Select top level part type in order to help factory to determine if it is a front-end SMT placement or back-end assembly.</description>
        <inlineHelpText>Select top level part type in order to help factory to determine if it is a front-end SMT placement or back-end assembly.</inlineHelpText>
        <label>Part Type</label>
        <picklist>
            <picklistValues>
                <fullName>Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A product family impacted by specific line item HW Change</description>
        <inlineHelpText>A product family impacted by specific line item HW Change</inlineHelpText>
        <label>Product Family</label>
        <referenceTo>Product_Family__c</referenceTo>
        <relationshipLabel>Build Request Details</relationshipLabel>
        <relationshipName>Build_Request_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_FBR_Number__c</fullName>
        <description>The master FBR number associated with the build detail.</description>
        <label>Related FBR Number</label>
        <referenceTo>HW_CR_Build_Planning__c</referenceTo>
        <relationshipLabel>Build Request Details</relationshipLabel>
        <relationshipName>Build_Request_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Ship_Tracking__c</fullName>
        <description>Field to record shipment tracking of particular supplier samples.</description>
        <inlineHelpText>Field to record shipment tracking of particular supplier samples.</inlineHelpText>
        <label>Related Ship Tracking</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>HW CR Build Request Detail</label>
    <nameField>
        <label>Line</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Build Request Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>